--- a/GraceTan_HW3.Rmd
+++ b/GraceTan_HW3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "GraceTan_HW3"
 author: Grace Tan
-date: "Sept 12, 2020"
+date: "Sept 14, 2020"
 output: html_document
 ---
 
@@ -31,13 +31,21 @@ range(key_crop_yields$Year)
 ```
 ### 3) Use my mean function to calculate the average tonnes per hectare of Maize
 
+*Edited the my_mean function to skip over NA values!
+
 ```{r}
 my_mean(key_crop_yields$Maize..tonnes.per.hectare.)
 ```
 
 ### 4) Save a file with the name of the variable Entity
 
+Uploaded as separate .txt file in CPSC_440 Repository
+
 ```{r}
-print(key_crop_yields$Entity)
+Entity <- data.frame(key_crop_yields$Entity)
+write.table(Entity, file = "HW2_Entity.txt",
+            row.names = FALSE,
+            col.names = FALSE)
 ```
+
 
